tests/recheck_empty_string_import/recheck_empty_string_import.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:8

Cannot resolve module ``. [cannot-resolve-module]

   2| import '';
             ^^



Found 1 error
